force-app/main/default/objects/Form_LCF_Disengagement_1__c/Form_LCF_Disengagement_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Full Award Set-Up - Disengagement - 1.0</description>
    <label>Form LCF Disengagement 1.0</label>
    <nameField>
        <displayFormat>DIS-{00000}</displayFormat>
        <label>Disengagement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Disengagement 1.0</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>