force-app/main/default/objects/Form_LCF_Disengagement_1__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Form LCF Disengagement 1.0</relationshipLabel>
    <relationshipName>setup_disengagements</relationshipName>
    <type>Lookup</type>
</CustomField>