force-app/main/default/objects/Form_LCF_Disengagement_1__c/fields/ds_commissioner_name__c.field-meta.xml
<CustomField>
    <fullName>ds_commissioner_name__c</fullName>
    <inlineHelpText>Name of Commissioner</inlineHelpText>
    <label>DS - Commissioner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>