force-app/main/default/objects/Form_LCF_Disengagement_1__c/fields/ds_reason__c.field-meta.xml
<CustomField>
    <fullName>ds_reason__c</fullName>
    <inlineHelpText>Why have they disengaged?</inlineHelpText>
    <label>DS - Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>